tests/NormalTests/paczka1/small_fuzzy/45936363.err
Error in line 2: W27 S351 60,9
Error in line 5: 1H7z7 A90 28,2
